@@ -31,9 +31,7 @@
  * POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef _STDLIB_NULL_POINTER_CHECK_H
-#include "stdlib_null_pointer_check.h"
-#endif /* _STDLIB_NULL_POINTER_CHECK_H */
+#if defined(__SASC)
 
 /****************************************************************************/
 
@@ -41,99 +39,56 @@
 #include "stdlib_headers.h"
 #endif /* _STDLIB_HEADERS_H */
 
-#ifndef _STDIO_HEADERS_H
-#include "stdio_headers.h"
-#endif /* _STDIO_HEADERS_H */
+/****************************************************************************/
+
+static BOOL show_profile_names = FALSE;
+static int nest_level;
 
 /****************************************************************************/
 
-#ifndef _STDLIB_MEMORY_H
-#include "stdlib_memory.h"
-#endif /* _STDLIB_MEMORY_H */
-
-/****************************************************************************/
-
-/* The following is not part of the ISO 'C' (1994) standard. */
-
-/****************************************************************************/
-
-#undef vasprintf
-
-/****************************************************************************/
-
-__static int
-__vasprintf(const char *file,int line,char **ret,const char *format,va_list arg)
+void ASM
+_PROLOG(REG(a0,char * id))
 {
-	struct iob string_iob;
-	int result = EOF;
-	char local_buffer[32];
+	nest_level++;
 
-	ENTER();
-
-	SHOWPOINTER(ret);
-	SHOWSTRING(format);
-
-	assert( ret != NULL && format != NULL && arg != NULL );
-
-	if(__check_abort_enabled)
-		__check_abort();
-
-	#if defined(CHECK_FOR_NULL_POINTERS)
+	if(id != NULL && __program_name != NULL)
 	{
-		if(ret == NULL || format == NULL || format == arg)
-		{
-			SHOWMSG("invalid parameters");
+		int i;
 
-			__set_errno(EFAULT);
-			goto out;
-		}
+		kprintf("[%s]",__program_name);
+
+		for(i = 0 ; i < nest_level ; i++)
+			kputc(' ');
+
+		kprintf("%s\n",id);
 	}
-	#endif /* CHECK_FOR_NULL_POINTERS */
-
-	(*ret) = NULL;
-
-	__initialize_iob(&string_iob,__vasprintf_hook_entry,
-		NULL,
-		local_buffer,sizeof(local_buffer),
-		-1,
-		-1,
-		IOBF_IN_USE | IOBF_WRITE | IOBF_BUFFER_MODE_NONE | IOBF_INTERNAL,
-		NULL);
-
-	string_iob.iob_String		= NULL;
-	string_iob.iob_StringSize	= 0;
-	string_iob.iob_File			= (char *)file;
-	string_iob.iob_Line			= line;
-
-	result = vfprintf((FILE *)&string_iob,format,arg);
-	if(result < 0)
-	{
-		SHOWMSG("ouch. that didn't work");
-
-		if(string_iob.iob_String != NULL)
-			__free(string_iob.iob_String,string_iob.iob_File,string_iob.iob_Line);
-
-		goto out;
-	}
-
-	SHOWSTRING(string_iob.iob_String);
-
-	(*ret) = string_iob.iob_String;
-
- out:
-
-	RETURN(result);
-	return(result);
 }
 
 /****************************************************************************/
 
-int
-vasprintf(char **ret,const char *format,va_list arg)
+void ASM
+_EPILOG(REG(a0,char * id))
 {
-	int result;
-
-	result = __vasprintf(NULL,0,ret,format,arg);
-
-	return(result);
+	if(nest_level > 0)
+		nest_level--;
 }
+
+/****************************************************************************/
+
+void
+__show_profile_names(void)
+{
+	show_profile_names = TRUE;
+}
+
+/****************************************************************************/
+
+void
+__hide_profile_names(void)
+{
+	show_profile_names = FALSE;
+}
+
+/****************************************************************************/
+
+#endif /* __SASC */
