@@ -31,109 +31,41 @@
  * POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef _STDLIB_NULL_POINTER_CHECK_H
-#include "stdlib_null_pointer_check.h"
-#endif /* _STDLIB_NULL_POINTER_CHECK_H */
+#ifndef _STDLIB_PROFILE_MONITORING_H
+#define _STDLIB_PROFILE_MONITORING_H
 
 /****************************************************************************/
 
-#ifndef _STDLIB_HEADERS_H
-#include "stdlib_headers.h"
-#endif /* _STDLIB_HEADERS_H */
-
-#ifndef _STDIO_HEADERS_H
-#include "stdio_headers.h"
-#endif /* _STDIO_HEADERS_H */
+/* The SAS/C profiling hooks can be used to track call chains. Neat
+   trick, but not always necessary. Don't enable this unless you know
+   what you're doing... */
 
 /****************************************************************************/
 
-#ifndef _STDLIB_MEMORY_H
-#include "stdlib_memory.h"
-#endif /* _STDLIB_MEMORY_H */
+/*#define USE_PROFILE_MONITORING*/
 
 /****************************************************************************/
 
-/* The following is not part of the ISO 'C' (1994) standard. */
+#if defined(__SASC) && defined(USE_PROFILE_MONITORING)
 
 /****************************************************************************/
 
-#undef vasprintf
+extern void __show_profile_names(void);
+extern void __hide_profile_names(void);
 
 /****************************************************************************/
 
-__static int
-__vasprintf(const char *file,int line,char **ret,const char *format,va_list arg)
-{
-	struct iob string_iob;
-	int result = EOF;
-	char local_buffer[32];
-
-	ENTER();
-
-	SHOWPOINTER(ret);
-	SHOWSTRING(format);
-
-	assert( ret != NULL && format != NULL && arg != NULL );
-
-	if(__check_abort_enabled)
-		__check_abort();
-
-	#if defined(CHECK_FOR_NULL_POINTERS)
-	{
-		if(ret == NULL || format == NULL || format == arg)
-		{
-			SHOWMSG("invalid parameters");
-
-			__set_errno(EFAULT);
-			goto out;
-		}
-	}
-	#endif /* CHECK_FOR_NULL_POINTERS */
-
-	(*ret) = NULL;
-
-	__initialize_iob(&string_iob,__vasprintf_hook_entry,
-		NULL,
-		local_buffer,sizeof(local_buffer),
-		-1,
-		-1,
-		IOBF_IN_USE | IOBF_WRITE | IOBF_BUFFER_MODE_NONE | IOBF_INTERNAL,
-		NULL);
-
-	string_iob.iob_String		= NULL;
-	string_iob.iob_StringSize	= 0;
-	string_iob.iob_File			= (char *)file;
-	string_iob.iob_Line			= line;
-
-	result = vfprintf((FILE *)&string_iob,format,arg);
-	if(result < 0)
-	{
-		SHOWMSG("ouch. that didn't work");
-
-		if(string_iob.iob_String != NULL)
-			__free(string_iob.iob_String,string_iob.iob_File,string_iob.iob_Line);
-
-		goto out;
-	}
-
-	SHOWSTRING(string_iob.iob_String);
-
-	(*ret) = string_iob.iob_String;
-
- out:
-
-	RETURN(result);
-	return(result);
-}
+#else
 
 /****************************************************************************/
 
-int
-vasprintf(char **ret,const char *format,va_list arg)
-{
-	int result;
+#define __show_profile_names() ((void)0)
+#define __hide_profile_names() ((void)0)
 
-	result = __vasprintf(NULL,0,ret,format,arg);
+/****************************************************************************/
 
-	return(result);
-}
+#endif /* __SASC && USE_PROFILE_MONITORING */
+
+/****************************************************************************/
+
+#endif /* _STDLIB_PROFILE_MONITORING_H */
